Fix for text misalignment in games list table

--- a/prerender.css
+++ b/prerender.css
@@ -399,10 +399,6 @@ border-bottom-color: transparent;
   font-size: 18px;
 }
 
-.num {
-  font-family: 'Roboto Mono', monospace;
-}
-
 .unit {
   font-size: 20px; 
 }
