--- a/src/styles.css
+++ b/src/styles.css
@@ -425,10 +425,6 @@ a.navbar-brand > img {
     font-size: 18px;
 }
 
-.num {
-    font-family: 'Roboto Mono', monospace;
-}
-
 .unit {
     font-size: 20px; 
 }
